--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
       </div>
     </header>
 
+	<h1>This is a test</h1>
     <div id="content-wrapper">
       <div class="inner clearfix">
         <section id="main-content">
