--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>fulin87的笔记</title>
-  <meta name="description" content="唯天下之至诚，胜天下之至伪；唯天下之至拙，胜天下之至巧。
+  <meta name="description" content="唯天下之至诚，胜天下之至伪；唯天下之至拙，胜天下之至巧!。
 ">
 
   <link rel="stylesheet" href="/css/main.css">
