--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="zh-CN">
 	<head>head</head>
 	<body>
-		<a href="bolg/index1.html">click me</a>
+		<a href="bolg/index.html">click me</a>
 		
 	<body>
 </html>
